python3.13 (3.13.0~rc1-1) UNRELEASED; urgency=medium

  * Python 3.13.0 release candidate 1.
  * Don't pass -specs=package-metadata.specs.
  * Don't mention 2to3 in package description anymore. Closes: #1077957.
  * Prefix patches for python3-minimal with 'min-'.

 -- Matthias Klose <doko@debian.org>  Tue, 06 Aug 2024 06:34:17 +0200

python3.13 (3.13.0~b4-1) unstable; urgency=medium

  [ Stefano Rivera ]
  * New upstream beta.
  * Drop patches superseded upstream: riscv64-no-perf-trampoline,
    skip-unallocated-arena-free.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 19 Jul 2024 10:12:48 +0900

python3.13 (3.13.0~b3-6) unstable; urgency=medium

  * Don't consider fixing interpreters in .so files, fixing a FTBFS on s390x.
  * Instead of exporting ELF_PACKAGE_METADATA, which isn't consumed directly,
    export the environment variables required by the metadata spec file.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 18 Jul 2024 11:00:47 +0900

python3.13 (3.13.0~b3-5) unstable; urgency=medium

  [ Matthias Klose ]
  * Set ELF_PACKAGE_METADATA, if unset.
  * Fix multiarch path for hurd-amd64. Addresses: #1076321.

  [ Benjamin Drung ]
  * debian/rules: Use pkg-info.mk
  * debian/rules: Use architecture.mk
  * Rely on SOURCE_DATE_EPOCH for reproducibility

  [ Graham Inggs ]
  * Skip test_exceptions and test_repl which never run to
    completion on the Ubuntu autopkgtest infrastructure

 -- Matthias Klose <doko@debian.org>  Wed, 17 Jul 2024 12:23:29 +0200

python3.13 (3.13.0~b3-3) unstable; urgency=medium

  * Remove distutils references, it was removed in 3.12.
  * Remove pysetup3(1), it was removed in 3.2.
  * Patch: Avoid munmap() of the zero page when freeing unallocated arenas.

 -- Stefano Rivera <stefanor@debian.org>  Tue, 09 Jul 2024 01:33:11 +0200

python3.13 (3.13.0~b3-2) unstable; urgency=medium

  * Patch: Disable perf_trampoline or riscv64, for now.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 03 Jul 2024 17:05:54 +0200
