@@ -4,6 +4,8 @@ python3.13 (3.13.0~rc1-1) UNRELEASED; urgency=medium
   * Don't pass -specs=package-metadata.specs.
   * Don't mention 2to3 in package description anymore. Closes: #1077957.
   * Prefix patches for python3-minimal with 'min-'.
+  * libpython-stdlib: Include the _gdbm and _tkinter extensions, prefixed
+    with a dot, and no dependencies on the gbm and tcl/tk libraries.
 
  -- Matthias Klose <doko@debian.org>  Tue, 06 Aug 2024 06:34:17 +0200
 
